[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundleup-sdk"
version = "0.1.0"
description = "Python SDK for BundleUp"
readme = "README.md"
authors = [
    {name = "BundleUp", email = "support@bundleup.io"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://bundleup.io"
Documentation = "https://docs.bundleup.io"
Repository = "https://github.com/bundleup/bundleup-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["bundleup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
